fix(styles): Color-contrast on blockquote with dark background

--- a/packages/styles/src/components/type.scss
+++ b/packages/styles/src/components/type.scss
@@ -91,6 +91,8 @@ fieldset {
   }
 
   &-footer {
+    color: var(--post-contrast-color);
+
     cite {
       @extend %font-curve-small;
       font-weight: type.$blockquote-cite-font-weight;
